// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button Component should render different sizes: button-size-default 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all duration-200 ease-in-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-white/50 focus-visible:ring-offset-2 focus-visible:ring-offset-transparent disabled:pointer-events-none disabled:opacity-50 bg-white text-forest-green hover:bg-white/90 active:scale-[0.98] h-10 px-4 py-2"
>
  Button
</button>
`;

exports[`Button Component should render different sizes: button-size-icon 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all duration-200 ease-in-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-white/50 focus-visible:ring-offset-2 focus-visible:ring-offset-transparent disabled:pointer-events-none disabled:opacity-50 bg-white text-forest-green hover:bg-white/90 active:scale-[0.98] h-10 w-10"
>
  Button
</button>
`;

exports[`Button Component should render different sizes: button-size-lg 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all duration-200 ease-in-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-white/50 focus-visible:ring-offset-2 focus-visible:ring-offset-transparent disabled:pointer-events-none disabled:opacity-50 bg-white text-forest-green hover:bg-white/90 active:scale-[0.98] h-11 px-8 text-base"
>
  Button
</button>
`;

exports[`Button Component should render different sizes: button-size-sm 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md font-medium transition-all duration-200 ease-in-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-white/50 focus-visible:ring-offset-2 focus-visible:ring-offset-transparent disabled:pointer-events-none disabled:opacity-50 bg-white text-forest-green hover:bg-white/90 active:scale-[0.98] h-9 px-3 text-xs"
>
  Button
</button>
`;

exports[`Button Component should render different variants: button-variant-default 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all duration-200 ease-in-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-white/50 focus-visible:ring-offset-2 focus-visible:ring-offset-transparent disabled:pointer-events-none disabled:opacity-50 bg-white text-forest-green hover:bg-white/90 active:scale-[0.98] h-10 px-4 py-2"
>
  Button
</button>
`;

exports[`Button Component should render different variants: button-variant-destructive 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all duration-200 ease-in-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-white/50 focus-visible:ring-offset-2 focus-visible:ring-offset-transparent disabled:pointer-events-none disabled:opacity-50 bg-destructive text-destructive-foreground hover:bg-destructive/90 active:scale-[0.98] h-10 px-4 py-2"
>
  Button
</button>
`;

exports[`Button Component should render different variants: button-variant-emerald 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all duration-200 ease-in-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-white/50 focus-visible:ring-offset-2 focus-visible:ring-offset-transparent disabled:pointer-events-none disabled:opacity-50 bg-emerald-500 text-white shadow-[0_4px_6px_-1px_rgba(16,185,129,0.3)] hover:bg-emerald-600 hover:shadow-[0_6px_8px_-1px_rgba(16,185,129,0.4)] active:scale-[0.98] h-10 px-4 py-2"
>
  Button
</button>
`;

exports[`Button Component should render different variants: button-variant-ghost 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all duration-200 ease-in-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-white/50 focus-visible:ring-offset-2 focus-visible:ring-offset-transparent disabled:pointer-events-none disabled:opacity-50 bg-transparent text-white hover:bg-white/10 h-10 px-4 py-2"
>
  Button
</button>
`;

exports[`Button Component should render different variants: button-variant-jungle 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all duration-200 ease-in-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-white/50 focus-visible:ring-offset-2 focus-visible:ring-offset-transparent disabled:pointer-events-none disabled:opacity-50 relative text-white border border-white/30 shadow-md hover:opacity-90 active:scale-[0.98] jungle-button h-10 px-4 py-2"
>
  Button
</button>
`;

exports[`Button Component should render different variants: button-variant-outline 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all duration-200 ease-in-out focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-white/50 focus-visible:ring-offset-2 focus-visible:ring-offset-transparent disabled:pointer-events-none disabled:opacity-50 bg-transparent text-white border border-white/30 hover:bg-white/10 hover:border-white/50 h-10 px-4 py-2"
>
  Button
</button>
`;
